documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32NET.CS

        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTRdPoll@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_INTRdPoll(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_INTReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_INTReset(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_IsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_IsBC(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_IsMON@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_IsMON(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_IsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_IsRT(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_IsRTMON@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_IsRTMON(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Mask(UInt32 dataval, UInt16 cntval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Mod(UInt32 moda, UInt32 modb);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONAll@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_MONAll(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONBlockBase@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_MONBlockBase(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONDataBase@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_MONDataBase(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_MONNone@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_MONNone(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_OkayHandle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_OkayHandle(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_OpenDevice@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_OpenDevice(IntPtr device_id);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PackRTCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_PackRTCWD(Int32 subaddr, Int32 trbit, Int32 mcflag, Int32 bcastflag, Int32 count);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PeekAttr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern byte C11_PeekAttr(UInt16 wordoffset, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PeekStrAttr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PeekStrAttr(ref UInt16 pwbuffer, UInt16 wordoffset, Int32 iwordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PeekStrMem@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PeekStrMem(ref UInt16 pwbuffer, UInt16 wordoffset, Int32 iwordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PokeAttr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PokeAttr(byte data, UInt16 wordoffset, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PokeStrAttr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PokeStrAttr(ref UInt16 pwbuffer, UInt16 wordoffset, Int32 iwordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_PokeStrMem@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_PokeStrMem(ref UInt16 pwbuffer, UInt16 wordoffset, Int32 iwordcount, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTAddrData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTAddrData(UInt16 typeval, UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTAddrDesc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTAddrDesc(UInt16 typeval, UInt16 cwd, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTAddrParity@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_RTAddrParity(Int32 rtaddr);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTInitData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_RTInitData(UInt16 scheme, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTPokeData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTPokeData(UInt16 cwd, ref UInt16 data, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTRdDesc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTRdDesc(UInt16 cwd, ref UInt16 desc, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_RTWrDesc@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_RTWrDesc(UInt16 cwd, ref UInt16 desc, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetAllILLEGAL@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetAllILLEGAL(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetBCAST@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetBCAST(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetBUF@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetBUF(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetCHAN@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetCHAN(UInt16 chanval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetCIRCLE@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetCIRCLE(UInt16 circleval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetDYNBC@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetDYNBC(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetEXT@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetEXT(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetILLEGAL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetILLEGAL(Int32 subaddr, Int32 trbit, Int32 mcflag, Int32 bcastflag, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetINT@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetINT(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetIntLog@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetIntLog(UInt16 addressval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetINTMASK@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetINTMASK(UInt16 maskval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetLog@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C11_SetLog(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetMODE@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetMODE(UInt16 modeval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetMonCtrl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetMonCtrl(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetMonFilt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetMonFilt(UInt16 valuel, UInt16 valueh, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetPP@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetPP(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetRTADDR@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetRTADDR(UInt16 rtaddr, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetStatus(UInt16 flags, UInt16 immclear, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetSTD@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetSTD(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetTIMEOUT@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetTIMEOUT(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_SetXMTSW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_SetXMTSW(UInt16 enableval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Shl(UInt32 dataval, UInt16 cntval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_Shr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C11_Shr(UInt32 dataval, UInt16 cntval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_StatRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_StatRead(UInt32 handleval);
